JumpScript/tests/baselines/reference/parserMemberAccessorDeclaration18.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration18.jump(2,12): error TS1053: A 'set' accessor cannot have rest parameter.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration18.jump (1 errors) ====
    class C {
       set Foo(...a) { }
               ~~~
!!! error TS1053: A 'set' accessor cannot have rest parameter.
    }